--- a/www/index.html
+++ b/www/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Creator</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <script src="pixi.js"></script>
