--- a/www/index.html
+++ b/www/index.html
@@ -1,3 +1,15 @@
 <!doctype html>
 <head><meta charset="utf-8"></head>
-<body><script src="init.js"></script></body>
+<body>
+  <script src="init.js"></script>
+  <script src="core.js"></script>
+  <script src="main.js"></script>
+  <script>
+    // Ensure module names match filenames
+    load.strict = true;
+    // Clean the body real nice
+    document.body.textContent = "";
+    // Start the main module
+    load.async("main");
+  </script>
+</body>
